HETS-117 initial rental request service
