# APISpec/HETSswagger.yaml
@@ -4437,9 +4437,9 @@ paths:
         - application/json
         - text/json
       parameters:        
-        - name: serviceareas
+        - name: localareas
           in: query
-          description: Service Areas (array of id numbers)
+          description: Local Areas (array of id numbers)
           collectionFormat: multi
           required: false
           type: array
@@ -4551,6 +4551,52 @@ paths:
               $ref: "#/definitions/PermissionViewModel"
         404:
           description: Role not found
+  /rentalrequests/search:
+    get:
+      summary: Searches RentalRequests
+      description:
+        Used for the rental request search page.
+      tags:
+        - RentalRequests
+      consumes:
+        - application/json
+      produces:
+        - text/plain
+        - application/json
+        - text/json
+      parameters:        
+        - name: localareas
+          in: query
+          description: Local Areas (array of id numbers)
+          collectionFormat: multi
+          type: array
+          items:
+            type: integer       
+        - name: project
+          in: query
+          description: Searches equipmentAttachment type
+          type: string                  
+        - name: status
+          in: query
+          description: Status
+          type: string
+        - name: startDate
+          description: Inspection start date
+          in: query
+          type: string
+          format: date-time
+        - name: endDate
+          description: Inspection end date
+          in: query
+          type: string
+          format: date-time
+      responses:
+        200:
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/RentalRequestSearchResultViewModel"
   /roles/{id}/users:
     get:
       description: Gets all the users for a role
@@ -6533,6 +6579,31 @@ definitions:
         format: int32
         type: integer
         description: count of RentalRequest.status is Active for the project
+      status:
+        type: string
+        description: Project status        
+  RentalRequestSearchResultViewModel:
+    type: object
+    x-codegen-viewmodel: true
+    required:
+      - id
+    properties:
+      id:
+        format: int32
+        type: integer
+        x-type-options:
+          min: 1
+          max: 1000
+      localArea:
+        $ref: '#/definitions/LocalArea'
+      equipmentCount:
+        type: integer
+      equipmentType:
+        type: string
+      projectName:
+        type: string
+      primaryContact:
+        $ref: '#/definitions/Contact'
       status:
         type: string
         description: Project status        
