# Server/src/HETSAPI/Services/RentalRequestsService.cs
@@ -1,0 +1,44 @@
+/*
+ * REST API Documentation for the MOTI Hired Equipment Tracking System (HETS) Application
+ *
+ * The Hired Equipment Program is for owners/operators who have a dump truck, bulldozer, backhoe or  other piece of equipment they want to hire out to the transportation ministry for day labour and  emergency projects.  The Hired Equipment Program distributes available work to local equipment owners. The program is  based on seniority and is designed to deliver work to registered users fairly and efficiently  through the development of local area call-out lists. 
+ *
+ * OpenAPI spec version: v1
+ * 
+ * 
+ */
+
+using System;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel;
+using System.IO;
+using System.Linq;
+using System.Net;
+using System.Threading.Tasks;
+using Microsoft.AspNetCore.Mvc;
+using Newtonsoft.Json;
+using HETSAPI.Models;
+using HETSAPI.ViewModels;
+
+namespace HETSAPI.Services
+{
+    /// <summary>
+    /// 
+    /// </summary>
+    public interface IRentalRequestsService
+    {
+
+        /// <summary>
+        /// Searches RentalRequests
+        /// </summary>
+        /// <remarks>Used for the rental request search page.</remarks>
+        /// <param name="localareas">Local Areas (array of id numbers)</param>
+        /// <param name="project">Searches equipmentAttachment type</param>
+        /// <param name="status">Status</param>
+        /// <param name="startDate">Inspection start date</param>
+        /// <param name="endDate">Inspection end date</param>
+        /// <response code="200">OK</response>
+        IActionResult RentalrequestsSearchGetAsync(int?[] localareas, string project, string status, DateTime? startDate, DateTime? endDate);
+    }
+}
